--- a/index.css
+++ b/index.css
@@ -8,8 +8,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1em;
-  max-width: 400px;
+  gap: 2em;
+  max-width: 600px;
   margin: 1em auto;
 }
 
@@ -23,8 +23,11 @@ body {
   margin: 0;
 }
 
+.clockContainer {
+  text-align: center;
+}
+
 .latLonInputContainer {
-  margin-top: 2em;
   display: flex;
   flex-wrap: wrap;
   gap: 1em;
@@ -35,7 +38,12 @@ body {
   text-align: center;
 }
 
+#trackingObjectSelection {
+  padding: 0.5em 1em;
+}
+
 .requestButton {
   padding: 0.5em 2em;
   font-family: "Inter", sans-serif;
+  font-weight: 500;
 }
