--- a/index.css
+++ b/index.css
@@ -1,49 +1,87 @@
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: #333;
   color: whitesmoke;
   font-family: "Inter", sans-serif;
+  text-align: center;
 }
 
 .container {
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 2em;
+  justify-content: space-around;
   max-width: 600px;
-  margin: 1em auto;
+  margin: 0 auto;
+  padding: 0 1em;
 }
 
-.serverStatusContainer {
+/* .serverStatusContainer {
+  align-self: flex-start;
   display: flex;
-  flex-direction: column;
   align-items: center;
-}
+  gap: 1em;
+  font-size: 0.5em;
+} */
 
-.serverStatusResponse {
+/* .serverStatusResponse {
+  margin: 0;
+} */
+.title {
   margin: 0;
 }
 
 .clockContainer {
   text-align: center;
+  margin: 0;
 }
 
 .latLonInputContainer {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   gap: 1em;
 }
 
 .coordinateInput {
   padding: 0.5em;
+  font-family: "Inter", sans-serif;
   text-align: center;
+  font-size: 1em;
+  font-weight: 500;
+  width: 100%;
 }
 
 #trackingObjectSelection {
   padding: 0.5em 1em;
+  font-family: "Inter", sans-serif;
+  text-align: center;
+  font-size: 1em;
+  font-weight: 500;
+  width: 100%;
 }
 
 .requestButton {
-  padding: 0.5em 2em;
+  padding: 0.75em 2em;
   font-family: "Inter", sans-serif;
+  text-align: center;
+  font-size: 1em;
   font-weight: 500;
+  font-weight: 500;
+  background-color: rgb(0, 110, 55);
+  border: none;
+  border-radius: 6px;
+  color: whitesmoke;
+  text-shadow: 0px 0px 20px black;
+  letter-spacing: 2px;
+}
+
+.result {
+  margin: 1em;
 }
