First Draft Polish
- Basic error catching
- Removal of most console logs
- Bug fix where initial load would bypass fetch limit count

--- a/index.css
+++ b/index.css
@@ -5,6 +5,8 @@
   --darkGreenColor: #001b00;
   --lightRedColor: #ff5001;
   --darkRedColor: #3d1300;
+  --lightYellowColor: #ffa600;
+  --darkYellowColor: #573800;
 }
 
 *,
